devscripts (2.18.8) UNRELEASED; urgency=medium

  [ Reiner Herrmann ]
  * nmudiff:
    + Check for neomutt if mutt is not available.  Closes: #912083

  [ Xavier Guimard ]
  * French translation update.
  * uscan:
    + Fix default compression suffix in git HEAD mode.  Closes: #912403; MR: !81

  [ Jérémy Lal ]
  * uscan:
    + Fix missing parenthesis.  Closes: #913008

  [ Mattia Rizzolo ]
  * doc:
    + Move the instructions to build/install/clean the doc/ directory into a
      Makefile in that directory.
    + Move devscripts.1 and devscripts.conf.5 from scripts/ to doc/.
    + Fix devscripts.1 generation, build it from README instead of d/control
      and move the genmanpage.pl script out of debian/.  Closes: #912971
  * Fix the trap handling in multiple shell scripts.  Now they trap only EXIT,
    and not a random set of the first 15 signals.  Closes: #911969

 -- Mattia Rizzolo <mattia@debian.org>  Sun, 28 Oct 2018 16:30:43 +0100

devscripts (2.18.7) unstable; urgency=medium

  [ Martyn Welch ]
  * chdist:
    + Make src2bin use the chosen dist config instead of the host's.  MR: !52

  [ Xavier Guimard ]
  * Perl scripts:
    + Add common modules to parse configuration, command line and normalize
      output.  MR: !51
      - This moves libmoo-perl and libipc-run-perl dependency from "Recommends"
        to "Depends".  MR: !51; MR: !74
  * uscan:
    + Fix bad package name in git HEAD mode.  Closes: #896136
    + Modified to use common Perl modules.  MR: !51
    + Download only the good ref in gitmode shallow.  Closes: #910709; MR: !57
    + Fix documentation: -dd isn't usable, but --dd is.  MR: !58
    + Embed mk-origtargz instead of launching it and parse stdout.  MR: !55
    + Enclose the whole @ANY_VERSION@, @ARCHIVE_EXT@, @DEB_EXT@ and
      @SIGNATURE_EXT into non-capturing groups (See #910910).  MR: !66
    + Disable pgpmode=previous lines if nothing was downloaded.
      Closes: #910910; MR: !69