@@ -178,7 +178,14 @@ sub set_default {
         $kname =~ s/^\-\-//;
         $kname =~ s/-/_/g;
         $kname =~ s/[!\|=].*$//;
-        $self->{$kname} = $default;
+        if (ref $default) {
+            unless (ref $default eq 'CODE') {
+                die "Default value must be a sub ($kname)";
+            }
+            $self->{$kname} = $default->();
+        } else {
+            $self->{$kname} = $default;
+        }
     }
 }
 
@@ -221,27 +228,34 @@ sub parse_conf_files {
             $kname =~ s/-/_/g;
             $kname =~ s/[!\|=].*$//;
             # Case 1: nothing in conf files, set default
-            next unless (defined $config_vars{$name});
+            next unless (length $config_vars{$name});
             if (defined $check) {
                 if (not(ref $check)) {
                     $check
                       = $self->_subs_check($check, $kname, $name, $default);
                 }
                 if (ref $check eq 'CODE') {
-                    my $res = $check->($self, $config_vars{$name}, $kname);
+                    my ($res, $msg)
+                      = $check->($self, $config_vars{$name}, $kname);
+                    ds_warn $msg unless ($res);
+                    next;
                 } elsif (ref $check eq 'Regexp') {
-                    if ($config_vars{$name} =~ $check) {
-                        $self->{$kname} = $config_vars{$name};
-                        $self->{modified_conf_msg}
-                          .= "  $name=$config_vars{$name}\n";
-                    } else {
+                    unless ($config_vars{$name} =~ $check) {
                         ds_warn("Bad $name value $config_vars{$name}");
+                        next;
                     }
                 } else {
-                    $self->die("Unknown check type for $name");
+                    ds_die("Unknown check type for $name");
+                    return undef;
                 }
-            } else {
-                $self->{$kname} = $config_vars{$name};
+            }
+            $self->{$kname} = $config_vars{$name};
+            $self->{modified_conf_msg} .= "  $name=$config_vars{$name}\n";
+            if (ref $default and ref($default->()) eq 'ARRAY') {
+                my @tmp = ($config_vars{$name} =~ /\s+"([^"]*)"\s+/g);
+                $config_vars{$name} =~ s/\s+"([^"]*)"\s+/ /g;
+                push @tmp, split(/\s+/, $config_vars{$name});
+                $self->{$kname} = \@tmp;
             }
         }
     }
@@ -266,8 +280,6 @@ sub parse_command_line {
         if ($_->[3] and ref($_->[3])) {
             my $kname = $_->[0];
             $kname =~ s/[!\|=].*$//;
-            die "Default value must be a sub ($kname)"
-              unless (ref($_->[3]) eq 'CODE');
             $opts->{$kname} = $_->[3]->();
         }
     }
@@ -281,14 +293,15 @@ sub parse_command_line {
         my $name = $kname;
         $kname =~ s/-/_/g;
         if (defined $opts->{$name}) {
+            next if (ref $opts->{$name} and !@{ $opts->{$name} });
             if (defined $check) {
                 if (not(ref $check)) {
                     $check
                       = $self->_subs_check($check, $kname, $name, $default);
                 }
                 if (ref $check eq 'CODE') {
-                    my $res = $check->($self, $opts->{$name}, $kname);
-                    return 1 unless ($res);
+                    my ($res, $msg) = $check->($self, $opts->{$name}, $kname);
+                    ds_die "Bad value for $name: $msg" unless ($res);
                 } elsif (ref $check eq 'Regexp') {
                     if ($opts->{$name} =~ $check) {
                         $self->{$kname} = $opts->{$name};
